--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
   },
   "homepage": "https://github.com/RodrigoFND/AnotherLand#readme",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
+    "axios": "^0.27.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
