--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.33.1",
+    "react-loader-spinner": "^5.1.6-0",
     "react-redux": "^8.0.2",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "react-spinners": "^0.13.3"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
