--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-loader-spinner": "^5.1.6-0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-spinners": "^0.13.3"
+    "react-spinners": "^0.13.3",
+    "react-toastify": "^9.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
