--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/RodrigoFND/AnotherLand#readme",
   "dependencies": {
+    "@hookform/resolvers": "^2.9.7",
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
@@ -29,13 +30,14 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.33.1",
+    "react-hook-form": "^7.34.0",
     "react-icons": "^4.4.0",
     "react-loader-spinner": "^5.1.6-0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-spinners": "^0.13.3",
-    "react-toastify": "^9.0.7"
+    "react-toastify": "^9.0.7",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
