--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/RodrigoFND/AnotherLand#readme",
   "dependencies": {
+    "@hookform/error-message": "^2.0.0",
     "@hookform/resolvers": "^2.9.7",
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
