--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
   },
   "homepage": "https://github.com/RodrigoFND/AnotherLand#readme",
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
     "@hookform/error-message": "^2.0.0",
     "@hookform/resolvers": "^2.9.7",
+    "@mui/material": "^5.10.1",
+    "@mui/x-data-grid": "^5.15.2",
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
