--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-data-grid": "^7.0.0-beta.15",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.0",
     "react-icons": "^4.4.0",
