--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-router-dom": "^6.3.0",
     "react-spinners": "^0.13.3",
     "react-toastify": "^9.0.7",
+    "vanilla-masker": "^1.2.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -55,6 +56,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/vanilla-masker": "^1.2.1",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "babel-loader": "^8.2.5",
